--- a/css/style.css
+++ b/css/style.css
@@ -46,8 +46,8 @@
     border-bottom: 1px solid #e7e9fc;
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
       0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-    padding-top: 12px;
-    padding-bottom: 12px;
+    /* padding-top: 12px;
+    padding-bottom: 12px; */
   }
   .header-container {
     display: flex;
@@ -103,11 +103,11 @@
   }
   
   .mob-menu-icon {
-    position: absolute;
+    /* position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    fill: #2f2f37;
+    transform: translate(-50%, -50%); */
+    stroke: #2f2f37;
   }
   
   .section {
@@ -801,7 +801,7 @@
       width: 584px;
     }
     .container {
-      max-width: 1157px;
+      max-width: 768px;
     }
   
     .logo {
@@ -962,7 +962,8 @@
       justify-content: flex-start;
       flex-wrap: wrap;
       column-gap: 0;
-      width: 584px;
+      padding-left: 108px;
+      /* width: 584px; */
     }
   
     .footer-logo {
