--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@
   }
   
   .container {
-    max-width: 767px;
+    max-width: 320px;
     padding-left: 16px;
     padding-right: 16px;
     margin: 0 auto;
@@ -107,7 +107,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%); */
-    stroke: #2f2f37;
+    filter: #2f2f37;
   }
   
   .section {
