--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,7 @@
     letter-spacing: 0.03em;
     color: #4d5ae5;
     margin-right: 149px;
+    padding-bottom: 17px;
   }
   .logo-text {
     color: #2e2f42;
