--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@
     color: #4d5ae5;
     margin-right: 149px;
     padding-bottom: 17px;
+    padding-top: 17px;
   }
   .logo-text {
     color: #2e2f42;
